Cleaning up examples and descriptions
